Email confirmation logic

--- a/FSPWebAPI/appsettings.json
+++ b/FSPWebAPI/appsettings.json
@@ -13,5 +13,11 @@
     "validIssuer": "FspApi",
     "validAudience": "https://localhost:5001",
     "expires": 5
+  },
+  "Email": {
+    "Server": "127.0.0.1",
+    "Port": 25,
+    "SenderName": "Anand",
+    "SenderEmail": "anand@test.com"
   }
 }
