--- a/FSPWebAPI/appsettings.json
+++ b/FSPWebAPI/appsettings.json
@@ -19,5 +19,8 @@
     "Port": 25,
     "SenderName": "Anand",
     "SenderEmail": "anand@test.com"
+  },
+  "Client": {
+    "Url": "http://localhost:5173"
   }
 }
