Refactored super admin with appsettings, constatns and secret

--- a/FSPWebAPI/appsettings.json
+++ b/FSPWebAPI/appsettings.json
@@ -22,5 +22,10 @@
   },
   "Client": {
     "Url": "http://localhost:5173"
+  },
+  "SuperAdmin": {
+    "FirstName": "Super",
+    "LastName": "Admin",
+    "Email": "admin@mail.com"
   }
 }
