--- a/FSPWebAPI/Properties/launchSettings.json
+++ b/FSPWebAPI/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "FSPWebAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
