Take origins from appsettings

--- a/FSPWebAPI/appsettings.json
+++ b/FSPWebAPI/appsettings.json
@@ -21,7 +21,8 @@
     "SenderEmail": "anand@test.com"
   },
   "Client": {
-    "Url": "http://localhost:5173"
+    "Url": "http://localhost:5173",
+    "Url2": "http://127.0.0.1:5173"
   },
   "SuperAdmin": {
     "FirstName": "Super",
