- Immediately logout user on block - Blacklist token on logout

--- a/FSPWebAPI/appsettings.json
+++ b/FSPWebAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "server=.; database=FSP_DB; Integrated Security=true"
+    "sqlConnection": "server=.; database=FSP_DB; Integrated Security=true",
+    "redis": "localhost:5002"
   },
   "JwtSettings": {
     "validIssuer": "FspApi",
