--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -22,4 +22,20 @@
     <ProjectReference Include="..\Service.Contracts\Service.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="AutoMapper" />
+    <Using Include="Contracts" />
+    <Using Include="Entities.ConfigurationModels" />
+    <Using Include="Entities.Exceptions" />
+    <Using Include="Entities.Models" />
+    <Using Include="Microsoft.AspNetCore.Http" />
+    <Using Include="Microsoft.AspNetCore.Identity" />
+    <Using Include="Microsoft.Extensions.Options" />
+    <Using Include="NETCore.MailKit.Core" />
+    <Using Include="Service.Contracts" />
+    <Using Include="Shared" />
+    <Using Include="Shared.DataTransferObjects" />
+    <Using Include="System.Security.Claims" />
+  </ItemGroup>
+
 </Project>
