--- a/Service.Contracts/Service.Contracts.csproj
+++ b/Service.Contracts/Service.Contracts.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="Shared.DataTransferObjects" />
+  </ItemGroup>
+
 </Project>
