--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="Entities.Models" />
+  </ItemGroup>
+
 </Project>
